@@ -1,8 +1,10 @@
 package ba.unsa.etf.nwt.inventra.order_service.controller;
 
 import ba.unsa.etf.nwt.inventra.order_service.dto.ArticleDTO;
+import ba.unsa.etf.nwt.inventra.order_service.dto.OrderDTO;
 import ba.unsa.etf.nwt.inventra.order_service.mapper.ArticleMapper;
 import ba.unsa.etf.nwt.inventra.order_service.model.Article;
+import ba.unsa.etf.nwt.inventra.order_service.model.Order;
 import ba.unsa.etf.nwt.inventra.order_service.service.ArticleService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -10,11 +12,16 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/articles")
@@ -29,11 +36,20 @@ public class ArticleController {
             @ApiResponse(responseCode = "200", description = "List of articles retrieved successfully")
     })
     @GetMapping
-    public ResponseEntity<List<ArticleDTO>> getAllArticles() {
-        List<Article> articles = articleService.findAll();
-        return ResponseEntity.ok(articles.stream()
+    public ResponseEntity<List<ArticleDTO>> getAllArticles(
+            @RequestParam(defaultValue = "0") int pageNo,
+            @RequestParam(defaultValue = "10") int pageSize,
+            @RequestParam(defaultValue = "id") String sortBy) {
+
+        Pageable pageable = PageRequest.of(pageNo, pageSize, Sort.by(sortBy));
+        Page<Article> pagedResult = articleService.findAll(pageable);
+
+        List<ArticleDTO> articles = pagedResult.getContent()
+                .stream()
                 .map(articleMapper::toDTO)
-                .toList());
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(articles);
     }
 
     @Operation(summary = "Get article by ID", description = "Retrieve an article by its ID.")
