@@ -5,15 +5,21 @@ import ba.unsa.etf.nwt.inventra.order_service.dto.OrderDTO;
 import ba.unsa.etf.nwt.inventra.order_service.model.Order;
 import ba.unsa.etf.nwt.inventra.order_service.service.OrderService;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import jakarta.validation.Valid;
+import io.swagger.v3.oas.annotations.Parameter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/orders")
@@ -22,16 +28,41 @@ public class OrderController {
     private final OrderService orderService;
     private final OrderMapper orderMapper;
 
-    @Operation(summary = "Get all orders", description = "Retrieve a list of all orders.")
+    @Operation(summary = "Batch insert articles", description = "Insert multiple articles in a single request")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "List of orders retrieved successfully")
+            @ApiResponse(responseCode = "201", description = "Successfully inserted articles"),
+            @ApiResponse(responseCode = "400", description = "Invalid input data")
     })
-    @GetMapping
-    public ResponseEntity<List<OrderDTO>> getAllOrders() {
-        List<Order> orders = orderService.findAll();
-        return ResponseEntity.ok(orders.stream()
+    @PostMapping("/batch")
+    public ResponseEntity<List<OrderDTO>> createArticlesBatch(@Valid @RequestBody List<OrderDTO> orderDTOs) {
+        List<Order> articles = orderDTOs.stream()
+                .map(orderMapper::toEntity)
+                .collect(Collectors.toList());
+
+        List<Order> createdArticles = orderService.createBatch(articles);
+
+        List<OrderDTO> responseDTOs = createdArticles.stream()
                 .map(orderMapper::toDTO)
-                .toList());
+                .collect(Collectors.toList());
+
+        return ResponseEntity.status(HttpStatus.CREATED).body(responseDTOs);
+    }
+
+    @GetMapping
+    public ResponseEntity<List<OrderDTO>> getAllOrders(
+            @RequestParam(defaultValue = "0") int pageNo,
+            @RequestParam(defaultValue = "10") int pageSize,
+            @RequestParam(defaultValue = "id") String sortBy) {
+
+        Pageable pageable = PageRequest.of(pageNo, pageSize, Sort.by(sortBy));
+        Page<Order> pagedResult = orderService.findAll(pageable);
+
+        List<OrderDTO> orders = pagedResult.getContent()
+                .stream()
+                .map(orderMapper::toDTO)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(orders);
     }
 
     @Operation(summary = "Get order by ID", description = "Retrieve an order by its ID.")
@@ -46,6 +77,12 @@ public class OrderController {
                 .map(orderMapper::toDTO)
                 .map(ResponseEntity::ok)
                 .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
+    @PatchMapping("/{id}")
+    public ResponseEntity<OrderDTO> patchOrder(@PathVariable Long id, @RequestBody OrderDTO orderUpdates) {
+        Order updatedOrder = orderService.patch(id, orderMapper.toEntity(orderUpdates));
+        return ResponseEntity.ok(orderMapper.toDTO(updatedOrder));
     }
 
     @Operation(summary = "Create a new order", description = "Create a new order.")
